--- a/templates/docs/view.html
+++ b/templates/docs/view.html
@@ -1,18 +1,19 @@
 {% extends 'base.html' %}
-{% load static static_versioned %}
 {% block body_class %}docs-page{% endblock %}
 {% block content %}
-<link rel="stylesheet" href="{% static_v 'css/docs.css' %}" type="text/css">
+{% include 'docs/_assets_head.html' %}
 
 <div class="docs-toolbar-wrap">
     <div class="docs-shell docs-toolbar">
         <div>
             <h1 class="docs-title">{{ doc_title }}</h1>
-            <div class="docs-subtitle">/media/docs/{{ doc_relative_path }}</div>
+            <div class="docs-subtitle">/docs/{{ doc_relative_path }}</div>
         </div>
         <div class="docs-toolbar-actions">
-            <a class="docs-btn" href="{{ docs_write_url }}?path={{ doc_relative_path|urlencode }}">편집</a>
-            <button class="docs-btn" type="button" id="docs-delete-btn">삭제</button>
+            {% if docs_can_edit %}
+                <a class="docs-btn" href="{{ docs_write_url }}?path={{ doc_relative_path|urlencode }}">편집</a>
+                <button class="docs-btn" type="button" id="docs-delete-btn">삭제</button>
+            {% endif %}
             <a class="docs-btn" href="{{ docs_api_download_url }}?path={{ doc_relative_path|urlencode }}">다운로드</a>
         </div>
     </div>
@@ -29,5 +30,5 @@
     <article class="docs-markdown">{{ doc_content_html }}</article>
 </main>
 
-<script src="{% static_v 'js/docs_page.js' %}" defer onerror="window.__reloadStaticScript(this)"></script>
+{% include 'docs/_assets_script.html' %}
 {% endblock %}
